[ADD] write system call wrapper build failed.

--- a/libnim/Makefile
+++ b/libnim/Makefile
@@ -1,8 +1,11 @@
+%.o:%.S
+	as -c $< -o $(<:.S=.o)
+
 %.o:%.c
-	gcc -c $<
+	gcc -c $< -o $(<:.c=.o)
 
 all:
 	make libnim.a
 
-libnim.a: print.o string.o
+libnim.a: print.o string.o sys/mman.o libc.o api.o
 	ar rvs $@ $^
