--- a/libnim/Makefile
+++ b/libnim/Makefile
@@ -1,11 +1,19 @@
+CC	= gcc
+
+LNIM	= libnim.a
+LNIMOBJS= print.o string.o sys/mman.o libc.o api.o
+
 %.o:%.S
 	as --32 -c $< -o $(<:.S=.o)
 
 %.o:%.c
-	gcc -m32 -g -c $< -o $(<:.c=.o)
+	$(CC) -m32 -g -c $< -o $(<:.c=.o)
 
 all:
 	make libnim.a
 
-libnim.a: print.o string.o sys/mman.o libc.o api.o
+clean:
+	rm -rf $(LNIMOBJS)
+
+libnim.a: $(LNIMOBJS)
 	ar rvs $@ $^
